# pulse

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/bug/: SKILL.md
.agents/skills/feature/: SKILL.md
.agents/skills/release/: SKILL.md
crates/pulse-cli/: Cargo.toml
crates/pulse-cli/src/: config.rs  main.rs
crates/pulse-engine/: Cargo.toml
crates/pulse-engine/src/: auhal.rs  decode.rs  device.rs  error.rs  hal.rs  ioproc.rs  levels.rs  lib.rs
design/: pulse-desktop.pen
docs/: README.md
docs/arch/: pulse-engine.md  tech-stack.md
docs/impls/: 0001-engine-validation-cli.md  0002-hal-format-validation.md  0003-auhal-playback.md  0003-ioproc-playback.md  0004-cli-config.md  0005-desktop-device-settings.md  0005-product-design.md  0006-playback-controller.md  README.md  ROADMAP.md
docs/product/: mvp.md  vision.md
docs/reference/: learning-material.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
